# thakaa-ml-zero2hero

./: EDAAndMLBasicsThakaaBootcamp_Solutions.ipynb  MLModelsDeploymentThakaaBootcamp.ipynb  README.md  config.yml  processing.py  pyproject.toml  requirements.txt  utils.py
notebooks/: EDAAndMLBasicsThakaaBootcamp.ipynb  EDAAndMLBasicsThakaaBootcamp_Solutions.ipynb  MLModelsDeploymentThakaaBootcamp.ipynb  MLModelsDeploymentThakaaBootcamp_Solutions.ipynb  app.py
