[tool.poetry]
name = "thakaa-ml-zero2hero"
version = "0.1.0"
description = ""
authors = ["Hassan Alsawadi <h.alsawaddi@gmail.com>"]
readme = "README.md"
packages = [{include = "thakaa-ml-zero2hero"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.1"
pandas = "^1.5.3"
matplotlib = "^3.6.3"
seaborn = "^0.12.2"
scikit-learn = "^1.2.1"
jupyterlab = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
